--- a/karambit.html
+++ b/karambit.html
@@ -9,7 +9,7 @@
  <body> 
   <header> <h1>faca karambit</h1> </header> 
  <section class="container"> 
-    <div class="imagem"> <img src="img/facas/karambit_img.webp" alt="faca karambit"></div> 
+    <div class="imagem"> <img src="img/karambit_img.webp" alt="faca karambit"></div> 
  <div class="texto"><p>O karambit é reconhecido por sua lâmina curva e afiada, inspirada na garra de tigre. Essa forma permite cortes precisos e rápidos, sendo ideal para movimentos circulares e de puxada. O anel no cabo garante firmeza e segurança, evitando que a faca escorregue da mão durante o uso. Sua ergonomia é uma das maiores qualidades, proporcionando controle total em manobras delicadas.</p>
     <p>Funcionalmente, o karambit é utilizado tanto em artes marciais quanto em tarefas práticas, como cortar cordas ou materiais leves. Sua versatilidade o torna uma ferramenta eficiente para defesa pessoal e também um item valorizado por colecionadores. É uma faca que une estilo exótico, praticidade e segurança.</p>
  <span class="preco">R$180,00</span>
@@ -30,3 +30,4 @@ src="https://www.youtube.com/embed/iBIChkulSXU?si=HOEKqTyH4MfDJLzZ" title="karam
     <head> 
 
  
+
