--- a/stiletto.html
+++ b/stiletto.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
  <html lang="pt-BR"> 
     <head> 
  <meta charset="UTF-8"> <meta name="viewport"
@@ -30,4 +30,5 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
   </footer><!DOCTYPE html>
  <html lang="pt-BR"> 
     <head> 
+
  
