--- a/balisong.html
+++ b/balisong.html
@@ -9,7 +9,7 @@
  <body> 
   <header> <h1>Balisong(butterfly)</h1> </header> 
  <section class="container"> 
-    <div class="imagem"> <img src="facas/balisong_img.webp" alt="Barisong"></div> 
+    <div class="imagem"> <img src="balisong_img.webp" alt="Barisong"></div> 
  <div class="texto"><p>O balisong se destaca pelo mecanismo de abertura diferenciado, com cabos articulados que giram em torno da lâmina. Essa característica oferece agilidade e permite manobras impressionantes, tornando-o popular entre praticantes de técnicas de manipulação. Sua qualidade está na combinação de resistência e mobilidade, já que a lâmina fica protegida quando fechada.</p>
     <p>Na prática, o balisong é compacto e fácil de transportar, sendo útil em tarefas cotidianas. Sua funcionalidade vai além do aspecto recreativo, pois pode ser usado em cortes rápidos e simples. É uma faca que une praticidade, estilo e diversão, atraindo tanto usuários quanto colecionadores.</p>
  <span class="preco">R$200,00</span>
@@ -30,4 +30,5 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
   </footer><!DOCTYPE html>
  <html lang="pt-BR"> 
     <head> 
+
  
