--- a/bowie.html
+++ b/bowie.html
@@ -9,7 +9,7 @@
  <body> 
   <header> <h1>faca bowie</h1> </header> 
  <section class="container"> 
-    <div class="imagem"> <img src="facas/bowie_img.webp" alt="faca bowie"></div> 
+    <div class="imagem"> <img src="bowie_img.webp" alt="faca bowie"></div> 
  <div class="texto"><p>A faca bowie é um clássico americano, com lâmina larga e ponta clip point. Sua qualidade está na robustez e na capacidade de realizar cortes pesados com precisão. É uma faca que transmite força e confiança, sendo reconhecida mundialmente por sua eficiência.</p>
     <p>Na prática, a bowie é funcional em caça, combate e atividades ao ar livre. Sua versatilidade permite desde cortes delicados até tarefas exigentes, como abrir trilhas ou preparar alimentos. É uma peça icônica que une tradição, resistência e utilidade.</p>
  <span class="preco">R$250,00</span>
@@ -30,4 +30,5 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
   </footer><!DOCTYPE html>
  <html lang="pt-BR"> 
     <head> 
+
  
