--- a/kukri.html
+++ b/kukri.html
@@ -9,7 +9,7 @@
  <body> 
   <header> <h1>faca kukri</h1> </header> 
  <section class="container"> 
-    <div class="imagem"> <img src="facas/kukri_img.webp" alt=""></div> 
+    <div class="imagem"> <img src="kukri_img.webp" alt=""></div> 
  <div class="texto"><p>O kukri é uma faca tradicional nepalesa, famosa por sua lâmina curva e robusta. Sua principal qualidade é a potência nos cortes, capaz de lidar com tarefas pesadas como cortar madeira ou preparar alimentos. É uma ferramenta resistente e eficiente, símbolo dos guerreiros Gurkhas.</p>
     <p>Funcionalmente, o kukri é versátil: serve tanto como ferramenta agrícola quanto como arma. Sua forma única permite golpes fortes e precisos, tornando-o indispensável em atividades ao ar livre. Além disso, carrega valor cultural e histórico, sendo muito apreciado por colecionadores.</p>
  <span class="preco">R$225,99</span>
@@ -30,4 +30,5 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
   </footer><!DOCTYPE html>
  <html lang="pt-BR"> 
     <head> 
+
  
