--- a/stiletto.html
+++ b/stiletto.html
@@ -9,7 +9,7 @@
  <body> 
   <header> <h1>faca stiletto</h1> </header> 
  <section class="container"> 
-    <div class="imagem"> <img src="facas/stiletto_img.webp" alt="faca stiletto"></div> 
+    <div class="imagem"> <img src="stiletto_img.webp" alt="faca stiletto"></div> 
  <div class="texto"><p>O stiletto é conhecido por sua lâmina longa e fina, ideal para perfuração. Sua qualidade está no design elegante e compacto, muitas vezes associado a mecanismos automáticos de abertura. É uma faca que une estética refinada e eficiência em cortes direcionados.</p>
     <p>Na funcionalidade, o stiletto é prático para quem busca uma faca leve e discreta. Seu formato facilita o transporte e o uso rápido, sendo valorizado tanto por colecionadores quanto por quem aprecia facas de estilo clássico. É uma peça que combina tradição e sofisticação.</p>
  <span class="preco">R$230,00</span>
@@ -32,3 +32,4 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
     <head> 
 
  
+
