--- a/tatica.html
+++ b/tatica.html
@@ -9,7 +9,7 @@
  <body> 
   <header> <h1>faca tatica (baioneta)</h1> </header> 
  <section class="container"> 
-    <div class="imagem"> <img src="facas/tatica_img.webp" alt="faca tatica (baioneta)"></div> 
+    <div class="imagem"> <img src="tatica_img.webp" alt="faca tatica (baioneta)"></div> 
  <div class="texto"><p>A faca tática é projetada para resistência e versatilidade. Sua lâmina robusta e cabo ergonômico garantem firmeza e durabilidade, mesmo em condições extremas. A qualidade principal está na confiabilidade: é uma ferramenta que não falha em situações de sobrevivência ou uso militar.</p>
     <p>Funcionalmente, a faca tática é indispensável em acampamentos, trilhas e missões de campo. Pode ser usada para cortar madeira, abrir embalagens, preparar alimentos ou até mesmo como instrumento de defesa. É uma peça multifuncional que combina força, praticidade e segurança.</p>
  <span class="preco">R$100,00</span>
@@ -30,4 +30,5 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
   </footer><!DOCTYPE html>
  <html lang="pt-BR"> 
     <head> 
+
  
