--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
     
-    <section id="Arsenal">
+    <section id="arsenal">
       <h2>Instrumentos</h2>
 
       <div class="Arsenal">
@@ -136,3 +136,4 @@
 </body>
 
 </html> 
+
