--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Arsenal do aço</title>
+  <link rel="icon" type="image/png"
+    href=karambit.favicon.png">
 
   
   <link rel="stylesheet" href="style.css">
@@ -136,4 +138,5 @@
 </body>
 
 </html> 
+
 
