--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Arsenal do aço</title>
   <link rel="icon" type="image/png"
-    href=karambit.favicon.png">
+    href="karambit.favicon.png">
 
   
   <link rel="stylesheet" href="style.css">
@@ -138,6 +138,7 @@
 </body>
 
 </html> 
+
 
 
 
