--- a/karambit.html
+++ b/karambit.html
@@ -5,6 +5,9 @@
    content="width=device-width, initial-scale=1.0"> 
 <link rel="stylesheet" href="style.css"> 
  <title>faca karambit</title> 
+      <link rel="icon" type="image/png"
+    href="karambit.favicon.png">
+
 </head> 
  <body> 
   <header> <h1>faca karambit</h1> </header> 
@@ -30,6 +33,7 @@ src="https://www.youtube.com/embed/iBIChkulSXU?si=HOEKqTyH4MfDJLzZ" title="karam
     <head> 
 
  
+
 
 
 
