--- a/tatica.html
+++ b/tatica.html
@@ -5,6 +5,9 @@
    content="width=device-width, initial-scale=1.0"> 
 <link rel="stylesheet" href="style.css"> 
  <title>faca karambit</title> 
+      <link rel="icon" type="image/png"
+    href="karambit.favicon.png">
+
 </head> 
  <body> 
   <header> <h1>faca tatica (baioneta)</h1> </header> 
@@ -32,3 +35,4 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
     <head> 
 
  
+
