--- a/bowie.html
+++ b/bowie.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
  <html lang="pt-BR"> 
     <head> 
  <meta charset="UTF-8"> <meta name="viewport"
@@ -32,3 +32,4 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
     <head> 
 
  
+
