--- a/bowie.html
+++ b/bowie.html
@@ -5,6 +5,9 @@
    content="width=device-width, initial-scale=1.0"> 
 <link rel="stylesheet" href="style.css"> 
  <title>faca bowie</title> 
+      <link rel="icon" type="image/png"
+    href="karambit.favicon.png">
+
 </head> 
  <body> 
   <header> <h1>faca bowie</h1> </header> 
@@ -32,4 +35,5 @@ frameboard="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; pic
     <head> 
 
  
+
 
