--- a/sobre.html
+++ b/sobre.html
@@ -3,6 +3,8 @@
     <head>
         <title>sobre nos</title>
         <link rel="stylesheet" href="style.css">
+         <link rel="icon" type="image/png"
+    href="karambit.favicon.png">
     </head>
     <body>
           <header>
@@ -24,5 +26,6 @@
     <p>gmail:arsenaldoaço@Gmail.com</p>
     <p>Endereço:Rua pará de Minas, 465</p>
   </footer>
+
 
 </html>
